--- a/Bootstrap/css/main.css
+++ b/Bootstrap/css/main.css
@@ -82,3 +82,44 @@ body {
   color: black;
   border-color: black;
 }
+
+/* header*/
+.header h1 {
+  text-transform: uppercase;
+  font-size: 40px;
+  margin-bottom: 5px;
+}
+
+.header-underline {
+  width: 150px;
+  border: 3px solid black;
+  margin: 0 auto 20px auto;
+}
+
+.header p {
+  font-size: 16px;
+  padding: 0 30px;
+}
+
+/* services section*/
+#services {
+  background-color: lightgray;
+  padding: 40px;
+}
+
+.services-container .fa {
+  font-size: 50px;
+  color: black;
+}
+
+.services h2 {
+  margin: 10px auto 20px auto;
+}
+.services-container p {
+  font-size: 16px;
+  line-height: 1.5em;
+}
+
+.services-container {
+  padding: 20px 40px;
+}
