--- a/Bootstrap/css/main.css
+++ b/Bootstrap/css/main.css
@@ -123,6 +123,7 @@ body {
 .services-container {
   padding: 20px 40px;
 }
+/* Ens of service section*/
 
 /* Promise section*/
 .promise-picture {
@@ -149,3 +150,53 @@ body {
 #promise .fa {
   color: blue;
 }
+/*  end of Promise section*/
+
+/* Skills section*/
+
+#skills {
+  color: black;
+  background-color: yellow;
+  padding: 40px 40px;
+}
+
+#skills .col-sm-6 {
+  padding: 0 40px;
+}
+
+#skills .progress {
+  border-radius: 0;
+  background-color: white;
+}
+/* End Skills section*/
+
+/* jumbotron section*/
+.jumbotron {
+  margin: 0;
+  padding: 40px;
+  background-color: aqua;
+}
+
+.jumbo h1 {
+  margin-top: 0;
+  margin-bottom: 0;
+  text-transform: uppercase;
+  line-height: 2em;
+}
+
+.jumbo a {
+  font-size: 30px;
+  border: 2px solid white;
+  display: inline-block;
+  padding: 15px 20px;
+  margin-top: 40px;
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.jumbo a:hover {
+  color: white;
+  background-color: black;
+}
+/* End of jumbotron section*/
